--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+.eslintcache
+
 
 # testing
 /coverage
@@ -21,3 +21,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+debug.log
